# kicad3Dmodels

./: CMakeLists.txt  Doxyfile  INSTALL  README  README.Licenses  README.Namespaces  README.md  index.html  package.sh  params.json
docs/python/: kc3d.tex  kc3d_conn.tex  kc3d_diode.tex  kc3d_dip.tex  kc3d_intro.tex  kc3d_resist.tex  kc3d_tools.tex
docs/python/img/: k3ddiode.bb  k3ddipn.bb  k3dintro-headers.bb  k3dres-horiz.bb  k3dres-vertical.bb  k3dtools-board.bb  k3dtools-coil.bb  k3dtools-extrude.bb  k3dtools-funnel.bb  k3dtools-hdrcase.bb  k3dtools-pin.bb  k3dtools-weird.bb
docs/python/img_orig/: bgnd.wrl
docs/python/img_orig/diodes/: do201_0I200V.wrl  do201_0I200VK2.wrl  do201_0I600H.wrl  do204_0I200V.wrl  do204_0I200VK2.wrl  do204_0I600H.wrl  do35_0I100V.wrl  do35_0I100VK2.wrl  do35_0I300H.wrl  do41_0I100V.wrl  do41_0I100VK2.wrl  do41_0I400H.wrl  stitch_diode.in
docs/python/img_orig/dip/: DIL_12_special.wrl  dil12_i300.wrl  dil28_i300.wrl  dil40_i600.wrl  stitch_dip.in
docs/python/img_orig/intro-headers/: samtec_ESD_108_T_07_X_X.wrl  samtec_ESS_108_T_07_X_X.wrl  samtec_SLD_106_T_19.wrl  samtec_SL_106_T_19.wrl  samtec_TSW_108_07_G_D_XX.wrl  samtec_TSW_108_07_G_S_XX.wrl  stitch.in  testhdr_FR_6x2_8mm.wrl  testhdr_FS_6x2_8mm.wrl  testhdr_MS_6x2_8mm.wrl
docs/python/img_orig/other/: kc3tools-board.wrl  kc3tools-coil.wrl  kc3tools-extrude.wrl  kc3tools-funnel.wrl  kc3tools-hdr.wrl  kc3tools-pin.wrl  kc3tools-weird.wrl  st_board.in  st_coil.in  st_extrude.in  st_funnel.in  st_hdr.in  st_pin.in  st_weird.in
docs/vrml_notes/: kicad_3d_vrml.tex
docs/vrml_notes/eps/: case.eps  pin.eps
include/common/: keyvalparser.h  material.h  transform.h  vdefs.h  vrmlmat.h
include/vrml/common/: circle.h  dimple.h  funnel.h  hdrbase.h  hole.h  kc3dtess.h  pin.h  polygon.h  rectangle.h  shoulder.h  vcom.h  wire.h
include/vrml/models/: dip_case.h  dip_pin.h  resistor.h
mcad/: CMakeLists.txt
mcad/appearances/: CMakeLists.txt  black.mat  ceram_gry.mat  charcoal.mat  copper.mat  glass_blk.mat  glass_blu.mat  glass_clr.mat  gold.mat  nylon_wht.mat  rbc_blu_g.mat  rbc_crm_g.mat  rcc_blk_g.mat  rcc_blu_g.mat  rcc_brn_g.mat  rcc_gld_g.mat  rcc_grn_g.mat  rcc_gry_g.mat  rcc_org_g.mat  rcc_pur_g.mat  rcc_red_g.mat  rcc_slv_g.mat  rcc_wht_g.mat  rcc_yel_g.mat  tin.mat
mcad/colors/: README  black.mat  ceram_gry.mat  copper.mat  glass_blk.mat  glass_clr.mat  gold.mat  rbc_blu_g.mat  rbc_crm_g.mat  rcc_blk_g.mat  rcc_blu_g.mat  rcc_brn_g.mat  rcc_gld_g.mat  rcc_grn_g.mat  rcc_gry_g.mat  rcc_org_g.mat  rcc_pur_g.mat  rcc_red_g.mat  rcc_slv_g.mat  rcc_wht_g.mat  rcc_yel_g.mat  tin.mat
mcad/scripts/: CMakeLists.txt  README
mcad/scripts/batch/: CMakeLists.txt
mcad/scripts/batch/resistor/: CMakeLists.txt  README  build_lists.sh  generate.sh
mcad/scripts/batch/resistor/params/: genericCCR_0W25_040h  genericCCR_0W25_040v  genericMFR_0W50_040h  genericMFR_0W50_040v  sample_input
mcad/scripts/batch/resistor/stitch/: CCR_0W25_J_I400H_1R.in
mcad/scripts/demo/: CMakeLists.txt  coil.py  hdrdemo.py
mcad/scripts/py/: CMakeLists.txt  README  do201.py  do204.py  do35.py  do41.py  ry_finder_40xx.py  samtec_hle.py  samtec_sl_sld.py  samtec_ss_sd_ess_esd_hss.py  samtec_tsw.py  smt_qfp_soic.py
pyinc/common/: keyvalparser.pyinc  material.pyinc  transform.pydef  transform.pyinc  vrmlmat.pyinc
pyinc/vrml/common/: circle.pyinc  dimple.pyinc  funnel.pyinc  hdrbase.pyinc  hole.pyinc  kc3dtess.pydef  kc3dtess.pyinc  pin.pyinc  polygon.pydef  polygon.pyinc  rectangle.pyinc  shoulder.pyinc  vcom.pyinc  wire.pydef  wire.pyinc
scripts/demo/: README  hdrdemo.py
scripts/pkg/: pkg_4ucon.sh  pkg_diode.sh  pkg_dipn.sh  pkg_resistor_h.sh  pkg_resistor_v.sh  pkg_thru_con_sam_sl.sh  pkg_thru_con_sam_ss.sh  pkg_thru_con_sam_tsw.sh  pkg_thru_conn.sh
scripts/py/: do201.py  do204.py  do35.py  do41.py  ry_finder_40xx.py  samtec_sl_sld.py  samtec_ss_sd_ess_esd_hss.py  samtec_tsw.py
scripts/vrml/conn/: generate.sh  mk4ucon.sh  mksamsl.sh  mksamss.sh  mksamtsw.sh
scripts/vrml/diode/: generate.sh
scripts/vrml/dipn/: generate.sh
scripts/vrml/resistor/: README  build_lists.sh  generate.sh
src/: CMakeLists.txt  k3dconfig.h.in
src/common/: CMakeLists.txt  keyvalparser.cpp  keyvalparser.h  material.cpp  material.h  point.cpp  point.h  transform.cpp  transform.h  vdefs.h  vrmlmat.cpp  vrmlmat.h
src/mat/: CMakeLists.txt  README  material.cpp  material.h  vrmlmat.cpp  vrmlmat.h
src/mat/defs/: ceram_gry.mat  tin.mat
src/py/: CMakeLists.txt  README  kc3d.cpp  kc3dconn.cpp  kc3ddiode.cpp  kc3ddip.cpp  kc3dres.cpp  testhdr.py  testpin.py
src/vrml/: CMakeLists.txt  README
src/vrml/4UCon/: CMakeLists.txt  make19950.cpp
src/vrml/dipn/: CMakeLists.txt  dip.cpp  dip.h  dip_case.cpp  dip_case.h  dip_limits.h  dip_pin.cpp  dip_pin.h  makeDip.cpp
src/vrml/mfr_thru/: CMakeLists.txt  Makefile  build.sh  colorcodes.cpp  colorcodes.h  makeEnnn.cpp  makeMFR.cpp  resistor.cpp  resistor.h  testMFR.cpp
src/vrml/models/: CMakeLists.txt
src/vrml/models/conn/: CMakeLists.txt
src/vrml/models/conn/4UCon/: CMakeLists.txt  make19950.cpp
src/vrml/models/conn/hdr/: CMakeLists.txt  README  genhdr.cpp  hdrtest.cpp
src/vrml/models/conn/pcc/: CMakeLists.txt  pccsmpx.cpp
src/vrml/models/diode/: CMakeLists.txt
src/vrml/models/diode/do35/: do35.cpp
src/vrml/models/diode/generic/: gendiode.cpp
src/vrml/models/dipn/: CMakeLists.txt  dip.cpp  dip_case.cpp  dip_pin.cpp  makeDip.cpp
src/vrml/models/mfr_thru/: CMakeLists.txt  colorcodes.cpp  makeEnnn.cpp  makeMFR.cpp  resistor.cpp
src/vrml/models/stitch/: CMakeLists.txt  vrmlstitch.cpp
src/vrml/pcc/: CMakeLists.txt  pccsmpx.cpp
src/vrml/stitch/: CMakeLists.txt  vrmlstitch.cpp
src/vrml/vcom/: CMakeLists.txt  Makefile  Makefile~  TODO  circle.cpp  circle.h  dimple.cpp  funnel.cpp  funnel.h  hdrbase.cpp  hole.cpp  hole.h  kc3dtess.cpp  notes  pin.cpp  pin.h  polygon.cpp  polygon.h  polyrect.cpp  polyrect.h  rectangle.cpp  rectangle.h  ring.cpp  ring.h  shoulder.cpp  shoulder.h  testRing  testRing.cpp  vcom.cpp  vcom.h  vdefs.h  vrmlRing.wrl  wire.cpp
(+40 files in other folders)
